--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
 <body>
   <div class="container">
     <div class="img2">
-      <img class="eye" src="./images/icon-view.svg" alt="">
+      <img class="eye" src="./design/icon-view.svg" alt="">
     </div>
     <h2>Equilibrium #3429</h2>
     <p> Our Equilibrium collection promotes balance and calm.</p>
     <div class="eth">
-      <h5><img src="./images/icon-ethereum.svg" alt=""> 0.041 ETH</h>
-      <h5><img src="./images/icon-clock.svg" alt=""> 3 days left</h5>
+      <h5><img src="./design/icon-ethereum.svg" alt=""> 0.041 ETH</h>
+      <h5><img src="./design/icon-clock.svg" alt=""> 3 days left</h5>
     </div>
     <div class="creator">
-      <img src="./images/image-avatar.png" alt="creator-image">
+      <img src="./design/image-avatar.png" alt="creator-image">
       <h5>Creation of <span>Jules Wyvern</span></h5>
     </div>
   </div>
